# TrustLens

./: .gitignore  README.md  index.html  jpeg-embed.js  manifest.js  package-lock.json  package.json  pubspec.yaml  server.js  verifier.js
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/camera_app/: RawCameraView.kt  RawCameraViewFactory.kt
camera_app/: pubspec.yaml
camera_app/android/app/: build.gradle.kts
camera_app/android/app/src/main/: AndroidManifest.xml
camera_app/android/app/src/main/kotlin/com/example/camera_app/: MainActivity.kt
camera_app/android/app/src/main/kotlin/com/example/camera_app/crypto/: TrueLensJniBridge.kt  TrueLensKeyStoreManager.kt  TrueLensSigner.kt
camera_app/lib/: camera_screen.dart  crypto_engine.dart  gallery_screen.dart  image_detail_screen.dart  verify_screen.dart  watermark_screen.dart
camera_app/rust/c2pa_bridge/: Cargo.toml
camera_app/rust/c2pa_bridge/src/: lib.rs
lib/: camera_screen.dart  crypto_engine.dart  gallery_screen.dart  main.dart  verify_screen.dart  watermark_screen.dart
server/: .gitignore  package-lock.json  package.json  server.js  verifier.js
